<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Slika.SlikaPrikaz">

    <Button
        android:id="@+id/gumbPreklici"
        style="@style/gumb_prijava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/preklici"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:paddingStart="20dp"
        android:id="@+id/sNaslov"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.123" />

    <EditText
        android:id="@+id/sZapiski"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.275" />

    <EditText
        android:paddingStart="20dp"
        android:id="@+id/sCena"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.432" />

    <EditText
        android:paddingStart="20dp"
        android:id="@+id/sDatum"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/gumbShrani"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.602" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="center"
        android:text="@string/naslovSlike"
        app:layout_constraintBottom_toTopOf="@+id/sNaslov"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:gravity="center"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/zapiski"
        app:layout_constraintBottom_toTopOf="@+id/sZapiski"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sNaslov" />

    <TextView
        android:gravity="center"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/cena"
        app:layout_constraintBottom_toTopOf="@+id/sCena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sZapiski" />

    <TextView
        android:gravity="center"
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:text="@string/datum"
        app:layout_constraintBottom_toTopOf="@+id/sDatum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sCena" />

    <Button
        android:id="@+id/gumbShrani"
        style="@style/gumb_prijava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/shrani"
        app:layout_constraintBottom_toTopOf="@+id/gumbPreklici"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>