<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ozadje_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/prva_prijava"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/gumb_prijava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.851" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/prva_dobrodosli"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/gumb_prijava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.199" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"
        app:srcCompat="@mipmap/ikona_foreground" />

    <Button
        android:id="@+id/gumb_prijava"
        style="@style/gumb_prijava"
        android:layout_width="185dp"
        android:layout_height="57dp"
        android:fontFamily="serif-monospace"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.699" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="201dp"
        android:layout_height="61dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="92dp"
        android:layout_height="30dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/ozadje_napis_prva"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
